// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parser converts captions into WebVTT format 1`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
[WAKI] I am a priest living at Urin-in in Murasakino,

2
00:03:59.000 --> 00:04:04.000
I am in the service of the Emperor Ichijo."
`;

exports[`parser converts captions into WebVTT format 2`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
[WAKI] Kore wa miyako kitayama Murasakino

2
00:03:59.000 --> 00:04:04.000
Ichijō-no-In ni tsukae tatematsuru."
`;

exports[`parser converts captions into WebVTT format 3`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
<c.transcription>undefined</c>
<c.translation>([WAKI] I am a priest living at Urin-in in Murasakino,)</c>

2
00:03:59.000 --> 00:04:04.000
<c.transcription>undefined</c>
<c.translation>(I am in the service of the Emperor Ichijo.)</c>"
`;

exports[`parser extractRows extracts and formats content for a series of rows 1`] = `
{
  "beat": {
    "grid": [
      {
        "length": 1,
        "start": 1,
        "style": "normal",
        "text": "1",
        "voices": [],
      },
      {
        "length": 1,
        "start": 3,
        "style": "normal",
        "text": "2",
        "voices": [],
      },
      {
        "length": 1,
        "start": 5,
        "style": "normal",
        "text": "3",
        "voices": [],
      },
      {
        "length": 1,
        "start": 7,
        "style": "normal",
        "text": "4",
        "voices": [],
      },
      {
        "length": 1,
        "start": 9,
        "style": "normal",
        "text": "5",
        "voices": [],
      },
      {
        "length": 1,
        "start": 11,
        "style": "normal",
        "text": "6",
        "voices": [],
      },
      {
        "length": 1,
        "start": 13,
        "style": "normal",
        "text": "7",
        "voices": [],
      },
      {
        "length": 1,
        "start": 15,
        "style": "normal",
        "text": "8",
        "voices": [],
      },
    ],
    "value": "",
  },
  "dance": {
    "grid": [
      {
        "length": 4,
        "start": 2,
        "style": "normal",
        "text": "2. Open-retreat.",
        "voices": [],
      },
      {
        "length": 6,
        "start": 8,
        "style": "normal",
        "text": "1. R. Step pivot facing bridge.",
        "voices": [],
      },
    ],
    "value": "",
  },
  "nohkan": {
    "grid": [
      {
        "length": 3,
        "start": 15,
        "style": "normal",
        "text": "Hishigi",
        "voices": [],
      },
    ],
    "value": "",
  },
  "percussion": {
    "grid": [],
    "value": "tome",
  },
  "startTime": {
    "grid": [],
    "value": 1860,
  },
  "syllableNumber": {
    "grid": [
      {
        "length": 1,
        "start": 0,
        "style": "normal",
        "text": "1",
        "voices": [],
      },
      {
        "length": 1,
        "start": 1,
        "style": "normal",
        "text": "2",
        "voices": [],
      },
      {
        "length": 1,
        "start": 2,
        "style": "normal",
        "text": "3",
        "voices": [],
      },
      {
        "length": 1,
        "start": 3,
        "style": "normal",
        "text": "4",
        "voices": [],
      },
      {
        "length": 1,
        "start": 6,
        "style": "normal",
        "text": "5",
        "voices": [],
      },
      {
        "length": 1,
        "start": 7,
        "style": "normal",
        "text": "6",
        "voices": [],
      },
      {
        "length": 1,
        "start": 8,
        "style": "normal",
        "text": "7",
        "voices": [],
      },
      {
        "length": 1,
        "start": 10,
        "style": "normal",
        "text": "1",
        "voices": [],
      },
      {
        "length": 1,
        "start": 11,
        "style": "normal",
        "text": "2",
        "voices": [],
      },
      {
        "length": 1,
        "start": 12,
        "style": "normal",
        "text": "3",
        "voices": [],
      },
      {
        "length": 1,
        "start": 13,
        "style": "normal",
        "text": "4",
        "voices": [],
      },
      {
        "length": 1,
        "start": 15,
        "style": "normal",
        "text": "5",
        "voices": [],
      },
    ],
    "value": "",
  },
  "syllableText": {
    "grid": [
      {
        "length": 1,
        "start": 0,
        "style": "normal",
        "text": "yu",
        "voices": [],
      },
      {
        "length": 1,
        "start": 1,
        "style": "normal",
        "text": "ku",
        "voices": [],
      },
      {
        "length": 1,
        "start": 2,
        "style": "normal",
        "text": "he",
        "voices": [],
      },
      {
        "length": 1,
        "start": 3,
        "style": "normal",
        "text": "mo",
        "voices": [],
      },
      {
        "length": 1,
        "start": 4,
        "style": "normal",
        "text": "(o)",
        "voices": [],
      },
      {
        "length": 1,
        "start": 6,
        "style": "normal",
        "text": "shi",
        "voices": [],
      },
      {
        "length": 1,
        "start": 7,
        "style": "normal",
        "text": "ra",
        "voices": [],
      },
      {
        "length": 1,
        "start": 8,
        "style": "normal",
        "text": "zu",
        "voices": [],
      },
      {
        "length": 1,
        "start": 10,
        "style": "normal",
        "text": "u",
        "voices": [],
      },
      {
        "length": 1,
        "start": 11,
        "style": "normal",
        "text": "se",
        "voices": [],
      },
      {
        "length": 1,
        "start": 12,
        "style": "normal",
        "text": "ni",
        "voices": [],
      },
      {
        "length": 1,
        "start": 13,
        "style": "normal",
        "text": "ke",
        "voices": [],
      },
      {
        "length": 1,
        "start": 15,
        "style": "normal",
        "text": "ri",
        "voices": [],
      },
    ],
    "value": "",
  },
  "text": {
    "grid": [],
    "value": "",
  },
  "vocalRange": {
    "grid": [],
    "value": "high",
  },
}
`;

exports[`parser processCaptions parses caption lines into a list of hash maps 1`] = `
[
  {
    "endTime": 335,
    "japanese": "［ワキ］是は都北山紫野",
    "startTime": 325,
    "transcription": "[WAKI] Kore wa miyako kitayama Murasakino",
    "translation": "[WAKI] I am a priest living at Urin-in in Murasakino,",
  },
  {
    "endTime": 244,
    "japanese": "一條の院に仕へ奉る。",
    "startTime": 239,
    "transcription": "Ichijō-no-In ni tsukae tatematsuru.",
    "translation": "I am in the service of the Emperor Ichijo.",
  },
]
`;

exports[`parser processMetadata turns metadata into a hash map 1`] = `
{
  "dancePresent": {
    "present": "Yes",
    "value": "Feminine to Martial style",
  },
  "endTime": {
    "value": 1879,
  },
  "intensity": {
    "number": "13",
  },
  "nokhanPresent": {
    "present": "No",
  },
  "numberOfPercussion": {
    "number": "2",
    "value": "Otsuzumi + Kotsuzumi",
  },
  "numberVoices": {
    "number": "2",
    "value": "Jiutai",
  },
  "percussion": {
    "value": "Congruent",
  },
  "play": {
    "value": "kokaji",
  },
  "sectionName": {
    "value": "Ageuta-3",
  },
  "startTime": {
    "value": 1805,
  },
  "text": {
    "value": "Congruent - Hiranori",
  },
  "voice": {
    "value": "Sung - Tsuyogin",
  },
}
`;

exports[`parser processPhrases parse rows of raw data into structured phrases 1`] = `
[
  {
    "beat": {
      "grid": [
        {
          "length": 1,
          "start": 1,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 5,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 9,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "6",
          "voices": [],
        },
        {
          "length": 1,
          "start": 13,
          "style": "normal",
          "text": "7",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "8",
          "voices": [],
        },
      ],
      "value": "",
    },
    "nohkan": {
      "grid": [],
      "value": "",
    },
    "percussion": {
      "grid": [],
      "value": "tsuzuke",
    },
    "phrase": "1",
    "startTime": {
      "grid": [],
      "value": 1805,
    },
    "syllableNumber": {
      "grid": [
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 4,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 8,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
        {
          "length": 1,
          "start": 10,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 12,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 13,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 14,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
      ],
      "value": "",
    },
    "syllableText": {
      "grid": [
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "tsu",
          "voices": [],
        },
        {
          "length": 1,
          "start": 4,
          "style": "normal",
          "text": "u",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "ri",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "ki",
          "voices": [],
        },
        {
          "length": 1,
          "start": 8,
          "style": "normal",
          "text": "no",
          "voices": [],
        },
        {
          "length": 1,
          "start": 10,
          "style": "normal",
          "text": "mi",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "wo",
          "voices": [],
        },
        {
          "length": 1,
          "start": 12,
          "style": "normal",
          "text": "he",
          "voices": [],
        },
        {
          "length": 1,
          "start": 13,
          "style": "normal",
          "text": "n",
          "voices": [],
        },
        {
          "length": 1,
          "start": 14,
          "style": "normal",
          "text": "ji",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "(i)",
          "voices": [],
        },
      ],
      "value": "",
    },
    "text": {
      "grid": [],
      "value": "",
    },
    "vocalRange": {
      "grid": [
        {
          "length": 2,
          "start": 3,
          "style": "normal",
          "text": "high",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "medium",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "low",
          "voices": [],
        },
        {
          "length": 3,
          "start": 9,
          "style": "normal",
          "text": "low",
          "voices": [],
        },
      ],
      "value": "",
    },
  },
  {
    "beat": {
      "grid": [
        {
          "length": 1,
          "start": 1,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 5,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 9,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "6",
          "voices": [],
        },
        {
          "length": 1,
          "start": 13,
          "style": "normal",
          "text": "7",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "8",
          "voices": [],
        },
      ],
      "value": "",
    },
    "nohkan": {
      "grid": [],
      "value": "",
    },
    "percussion": {
      "grid": [],
      "value": "tsuzuke",
    },
    "phrase": "2",
    "startTime": {
      "grid": [],
      "value": 1814,
    },
    "syllableNumber": {
      "grid": [
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 4,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 8,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
        {
          "length": 1,
          "start": 10,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 12,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 14,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
      ],
      "value": "",
    },
    "syllableText": {
      "grid": [
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "tsu",
          "voices": [],
        },
        {
          "length": 1,
          "start": 4,
          "style": "normal",
          "text": "u",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "ri",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "ki",
          "voices": [],
        },
        {
          "length": 1,
          "start": 8,
          "style": "normal",
          "text": "no",
          "voices": [],
        },
        {
          "length": 1,
          "start": 10,
          "style": "normal",
          "text": "mi",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "wo",
          "voices": [],
        },
        {
          "length": 1,
          "start": 12,
          "style": "normal",
          "text": "he",
          "voices": [],
        },
        {
          "length": 1,
          "start": 14,
          "style": "normal",
          "text": "n",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "ji",
          "voices": [],
        },
      ],
      "value": "",
    },
    "text": {
      "grid": [],
      "value": "",
    },
    "vocalRange": {
      "grid": [],
      "value": "high",
    },
  },
]
`;
